--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.8.1
-Django==5.1.2
+beautifulsoup4==4.12.3
+bootstrap4==0.1.0
+Django==4.2.16
+django-bootstrap-v5==1.0.11
+django-bootstrap4==24.4
+pillow==11.0.0
+soupsieve==2.6
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
